<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gamr</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="splash_screen_greeting">Find friends to play LoL or Smash with Gamr.</string>
    <string name="splash_screen_lol_button">Get Started</string>
    <string name="registration_username_hint">Pick a Username</string>
    <string name="registration_email_hint">Enter Your Email</string>
    <string name="registration_password_hint">Choose a Password</string>
    <string name="registration_create">Create Account</string>
    <string name="title_activity_league_profile">LeagueProfileActivity</string>
    <string name="create_profile_string">Create Profile</string>

    <!-- These are the strings for the League profile activity -->
    <string name="default_tag_string">Choose a tag name</string>
    <string name="default_profile_string">Enter your summoner name</string>
    <string name="role_string">Role</string>

    <!-- Role dropdown menu -->
    <string-array name="role_dropdown">
        <item>AD Carry</item>
        <item>Support</item>
        <item>Jungle</item>
        <item>Mid</item>
        <item>Top</item>
    </string-array>

    <string name="modes_string">Mode</string>

    <!-- Modes dropdown menu -->
    <string-array name="modes_dropdown">
        <item>Ranked Duo</item>
        <item>Ranked 5v5</item>
        <item>Ranked 3v3</item>
        <item>Normal 5v5</item>
        <item>Dominion</item>
    </string-array>

    <string name="server_string">Server</string>

    <!-- Server dropdown menu -->
    <string-array name="server_dropdown">
        <item>NA</item>
        <item>LAN</item>
        <item>EU East</item>
        <item>EU West</item>
    </string-array>

    <string name="find_matches_string">Find matches</string>
    <string name="title_activity_find_game">FindGameActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_find_games">FindGamesActivity</string>

    <!-- These are the string for the Messages Fragment -->
    <string name="pass_string">Pass</string>
    <string name="match_string">Match</string>
    <string name="new_search_string">New Search</string>
    <string name="title_activity_conversation">ConversationActivity</string>

    <!-- These strings are for the conversation activity -->
    <string name="send_message_string">Send</string>
    <string name="no_messages">You have no messages.</string>
    <string name="title_activity_create_user">New User</string>
    <string name="title_activity_profile">Profile</string>

    <!-- These strings are for the ProfileActivity -->
    <string name="tag_name_string">Tag Name</string>
    <string name="summoner_name_string">Summoner Name</string>
    <string name="save_profile_string">Save Profile</string>
    <string name="ad_carry_string">Marksman</string>
    <string name="support_string">Support</string>
    <string name="jungle_string">Jungle</string>
    <string name="mid_string">Mid</string>
    <string name="top_string">Top</string>
</resources>
