<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gamr.gamr.ProfileActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/summoner_name_string"
                        android:id="@+id/textView3"
                        android:layout_margin="5dp" />

                    <Space
                        android:layout_width="20px"
                        android:layout_height="20px"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Large Text"
                        android:id="@+id/summonerNameText"
                        android:layout_margin="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/tag_name_string"
                        android:id="@+id/tagNameLabel"
                        android:layout_margin="5dp" />

                    <Space
                        android:layout_width="20px"
                        android:layout_height="20px"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Test Tag Name"
                        android:textColor="@color/TextColor"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:id="@+id/tagNameText"
                        android:layout_margin="5dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/role_string"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_margin="10dp">

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/supportImageButton"
                        android:button="@drawable/supporticon"
                        android:background="@drawable/supporticon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/support_string"
                        android:id="@+id/textView4"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mageImageButton"
                        android:background="@drawable/mageicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/mid_string"
                        android:id="@+id/textView5"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tankImageButton"
                        android:background="@drawable/tankicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/top_string"
                        android:id="@+id/textView6"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/adcarryImageButton"
                        android:background="@drawable/marksmanicon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/ad_carry_string"
                        android:id="@+id/textView7"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight=".5" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/junglerImageButton"
                        android:background="@drawable/fightericon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/jungle_string"
                        android:id="@+id/textView8"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_profile_string"
                android:id="@+id/saveProfileButton"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
